# BRVM

./: Brainrot-Lang.md  Cargo.toml  README.md
docs/: brvm.md  roadmap.md
examples/: v1.brainrot  v2.brainrot  v3.brainrot  v4.brainrot
src/: compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs  vm.rs
tests/: language_smoke.rs
