[package]
name = "brvm"
version = "0.3.0"
edition = "2021"
authors = ["Aspenini"]
description = "Brainrot language compiler and virtual machine"
license = "MIT"
repository = "https://github.com/yourusername/brvm"
keywords = ["brainrot", "compiler", "vm", "interpreter", "language"]
categories = ["development-tools", "compilers"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

